--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -2,5 +2,8 @@
   "coc.source.jedi.priority": 0,
   "python.formatting.provider": "black",
   "python.formatting.blackArgs": ["--line-length 99"],
-  "python.workspaceSymbols.exclusionPatterns": ["**/site-packages/**", "**/.git/**"]
+  "python.workspaceSymbols.exclusionPatterns": ["**/site-packages/**", "**/.git/**"],
+  "python.linting.banditEnabled": true,
+  "python.linting.flake8Enabled": true,
+  "python.linting.mypyEnabled": true
 }
