--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -3,7 +3,7 @@
   "python.formatting.provider": "black",
   "python.formatting.blackArgs": ["--line-length 99"],
   "python.workspaceSymbols.exclusionPatterns": ["**/site-packages/**", "**/.git/**"],
-  "python.linting.banditEnabled": true,
   "python.linting.flake8Enabled": true,
-  "python.linting.mypyEnabled": true
+  "python.linting.mypyEnabled": true,
+  "python.linting.banditEnabled": true
 }
