--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -5,5 +5,5 @@
   "python.workspaceSymbols.exclusionPatterns": ["**/site-packages/**", "**/.git/**"],
   "python.linting.flake8Enabled": true,
   "python.linting.mypyEnabled": true,
-  "python.linting.banditEnabled": true
+  "python.linting.banditEnabled": false
 }
